exports[`mcfunction argument parser > brigadier:integer > Parse '-123' 1`] = `
{
  "node": {
    "type": "integer",
    "range": {
      "start": 0,
      "end": 4
    },
    "value": -123
  },
  "errors": []
}
`;

exports[`mcfunction argument parser > brigadier:integer > Parse '0' 1`] = `
{
  "node": {
    "type": "integer",
    "range": {
      "start": 0,
      "end": 1
    },
    "value": 0
  },
  "errors": []
}
`;

exports[`mcfunction argument parser > brigadier:integer > Parse '123' 1`] = `
{
  "node": {
    "type": "integer",
    "range": {
      "start": 0,
      "end": 3
    },
    "value": 123
  },
  "errors": []
}
`;
